[package]
name = "wkd-tester-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Alexis Lowe <alexis.lowe@chimbosonic.com>"]
description = "A CLI tool for testing and debugging OpenPGP Web Key Directory (WKD)"
keywords = ["cli", "wkd", "OpenPGP"]

[[bin]]
name = "wkd-tester"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
miette = { version = "7.5.0", features = ["fancy"] }
wkd = { path = "../wkd" }
wkd_fetch = { path = "../wkd_fetch" }
wkd_load = { path = "../wkd_load" }
tokio = { version = "1.43.0", features = ["full"] }
thiserror = "2.0.11"
