[package]
name = "wkd-tester-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Alexis Lowe <alexis.lowe@chimbosonic.com>"]
description = "A CLI tool for testing and debugging OpenPGP Web Key Directory (WKD)"
keywords = ["cli", "wkd", "OpenPGP"]

[[bin]]
name = "wkd-tester"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
miette = { version = "7.6.0", features = ["fancy"] }
wkd = { path = "../wkd" }
tokio = { version = "1.45.1", features = ["full"] }
thiserror = "2.0.12"
