[package]
name = "wkd-tester-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = {version="4.11.0", features = ["rustls"]}
wkd = { path = "../wkd" }
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
handlebars = { version = "6.3.2", features = ["dir_source"] }
env_logger = "0.11.8"
log = "0.4.28"
actix-governor = "0.10.0"
utoipa = { version = "5.3.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "8.0.3", features = ["actix-web"] }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full"] }
