[package]
name = "wkd-tester-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4.11.0", features = ["rustls"] }
wkd = { path = "../wkd" }
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
handlebars = { version = "6.3.2", features = ["dir_source"] }
env_logger = "0.11.8"
log = "0.4.28"
utoipa = { version = "5.3.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "8.0.3", features = ["actix-web"] }
tracing-subscriber = { version = "0.3.20", features = [
    "env-filter",
    "fmt",
], optional = true }
opentelemetry-otlp = { version = "0.31.0", features = [
    "grpc-tonic",
    "metrics",
], optional = true }
opentelemetry_sdk = { version = "0.31.0", optional = true }
opentelemetry = { version = "0.31.0", optional = true }
tracing-opentelemetry = { version = "0.32.0", optional = true }
opentelemetry-semantic-conventions = { version = "0.31.0", features = [
    "semconv_experimental",
], optional = true }
tracing-core = { version = "0.1.35", optional = true }
opentelemetry-stdout = { version = "0.31.0", optional = true }
tracing = { version = "0.1.41", optional = true }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full"] }


[features]
otel = [
    "wkd/tracing",
    "dep:tracing-subscriber",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry",
    "dep:tracing-opentelemetry",
    "dep:opentelemetry-semantic-conventions",
    "dep:tracing-core",
    "dep:opentelemetry-stdout",
    "dep:tracing",
]
