[package]
name = "wkd"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
miette = "7.6.0"
reqwest = {version = "0.12.24", default-features = false, features = ["rustls-tls"]}
sha1 = "0.10.6"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
url = "2.5.7"
z32 = "1.3.0"
anyhow = "1.0.100"
pgp = "0.17.0"
chrono = "0.4.42"
hex = "0.4.3"

[dev-dependencies]
mockito = "1.7.0"
