[package]
name = "wkd"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.0"
miette = "7.6.0"
reqwest = "0.13.1"
sha1 = "0.10.6"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
url = "2.5.8"
z32 = "1.3.0"
anyhow = "1.0.100"
pgp = "0.18.0"
chrono = "0.4.42"
hex = "0.4.3"
tracing = { version = "0.1.44", optional = true}

[dev-dependencies]
mockito = "1.7.1"

[features]
tracing = ["dep:tracing"]
