[package]
name = "wkd"
version = "0.1.0"
edition = "2024"

[dependencies]
miette = "7.6.0"
reqwest = "0.13.2"
sha1 = "0.10.6"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
url = "2.5.8"
z32 = "1.3.0"
chrono = "0.4.44"
tracing = { version = "0.1.44", optional = true}
bytes = "1.11.1"

[dev-dependencies]
mockito = "1.7.2"

[features]
tracing = ["dep:tracing"]
